--- a/views/home.html
+++ b/views/home.html
@@ -1,6 +1,28 @@
 <div class="main_content_div">
-    <div class="left-div">
-        This is Left division..
+    <div class="container-fluid left-div">
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+
     </div>
     <div class="main-div">
         <div ng-controller="shareExp">
@@ -34,7 +56,28 @@
             </div>
         </div>
     </div>
-    <div class="right-div">
-        This is right division..
+    <div class="container-fluid right-div">
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
+        This is Left division..<br>
     </div>
 </div>
